feat: poc for invoking GJF in native cli
(still very hacky but working)